Adds initial u-net and segnet discriminators

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -979,11 +979,11 @@
    "id": "0f38dae6-b9dd-4017-b4c7-0c7165cc9d7a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-17T10:47:35.545847Z",
-     "iopub.status.busy": "2022-02-17T10:47:35.544851Z",
-     "iopub.status.idle": "2022-02-17T10:47:42.694808Z",
-     "shell.execute_reply": "2022-02-17T10:47:42.694808Z",
-     "shell.execute_reply.started": "2022-02-17T10:47:35.545847Z"
+     "iopub.execute_input": "2022-02-24T21:08:11.972031Z",
+     "iopub.status.busy": "2022-02-24T21:08:11.971033Z",
+     "iopub.status.idle": "2022-02-24T21:08:20.185289Z",
+     "shell.execute_reply": "2022-02-24T21:08:20.184296Z",
+     "shell.execute_reply.started": "2022-02-24T21:08:11.972031Z"
     },
     "tags": []
    },
@@ -992,12 +992,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created downsample with 128\n",
-      "current_patches now 14.0\n",
-      "Created downsample with 256\n",
-      "current_patches now 6.0\n",
-      "Created downsample with 512\n",
-      "current_patches now 2.0\n",
       "Model: \"model_1\"\n",
       "__________________________________________________________________________________________________\n",
       " Layer (type)                   Output Shape         Param #     Connected to                     \n",
@@ -1009,32 +1003,102 @@
       " concatenate_7 (Concatenate)    (None, 64, 64, 8)    0           ['input_image[0][0]',            \n",
       "                                                                  'target_image[0][0]']           \n",
       "                                                                                                  \n",
-      " sequential_11 (Sequential)     (None, 32, 32, 64)   8192        ['concatenate_7[0][0]']          \n",
+      " sequential_11 (Sequential)     (None, 32, 32, 8)    1024        ['concatenate_7[0][0]']          \n",
       "                                                                                                  \n",
-      " sequential_12 (Sequential)     (None, 16, 16, 128)  131584      ['sequential_11[0][0]']          \n",
+      " zero_padding2d (ZeroPadding2D)  (None, 34, 34, 8)   0           ['sequential_11[0][0]']          \n",
       "                                                                                                  \n",
-      " sequential_13 (Sequential)     (None, 8, 8, 256)    525312      ['sequential_12[0][0]']          \n",
+      " conv2d_101 (Conv2D)            (None, 33, 33, 8)    264         ['zero_padding2d[0][0]']         \n",
       "                                                                                                  \n",
-      " sequential_14 (Sequential)     (None, 4, 4, 512)    2099200     ['sequential_13[0][0]']          \n",
-      "                                                                                                  \n",
-      " zero_padding2d (ZeroPadding2D)  (None, 6, 6, 512)   0           ['sequential_14[0][0]']          \n",
-      "                                                                                                  \n",
-      " conv2d_104 (Conv2D)            (None, 3, 3, 1024)   8388608     ['zero_padding2d[0][0]']         \n",
-      "                                                                                                  \n",
-      " batch_normalization_107 (Batch  (None, 3, 3, 1024)  4096        ['conv2d_104[0][0]']             \n",
+      " batch_normalization_104 (Batch  (None, 33, 33, 8)   32          ['conv2d_101[0][0]']             \n",
       " Normalization)                                                                                   \n",
       "                                                                                                  \n",
-      " leaky_re_lu_10 (LeakyReLU)     (None, 3, 3, 1024)   0           ['batch_normalization_107[0][0]']\n",
+      " leaky_re_lu_7 (LeakyReLU)      (None, 33, 33, 8)    0           ['batch_normalization_104[0][0]']\n",
       "                                                                                                  \n",
-      " zero_padding2d_1 (ZeroPadding2  (None, 5, 5, 1024)  0           ['leaky_re_lu_10[0][0]']         \n",
+      " zero_padding2d_1 (ZeroPadding2  (None, 35, 35, 8)   0           ['leaky_re_lu_7[0][0]']          \n",
       " D)                                                                                               \n",
       "                                                                                                  \n",
-      " conv2d_105 (Conv2D)            (None, 1, 1, 1)      25601       ['zero_padding2d_1[0][0]']       \n",
+      " conv2d_102 (Conv2D)            (None, 34, 34, 16)   528         ['zero_padding2d_1[0][0]']       \n",
+      "                                                                                                  \n",
+      " batch_normalization_105 (Batch  (None, 34, 34, 16)  64          ['conv2d_102[0][0]']             \n",
+      " Normalization)                                                                                   \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_8 (LeakyReLU)      (None, 34, 34, 16)   0           ['batch_normalization_105[0][0]']\n",
+      "                                                                                                  \n",
+      " dropout_3 (Dropout)            (None, 34, 34, 16)   0           ['leaky_re_lu_8[0][0]']          \n",
+      "                                                                                                  \n",
+      " zero_padding2d_2 (ZeroPadding2  (None, 36, 36, 16)  0           ['dropout_3[0][0]']              \n",
+      " D)                                                                                               \n",
+      "                                                                                                  \n",
+      " conv2d_103 (Conv2D)            (None, 33, 33, 16)   4112        ['zero_padding2d_2[0][0]']       \n",
+      "                                                                                                  \n",
+      " batch_normalization_106 (Batch  (None, 33, 33, 16)  64          ['conv2d_103[0][0]']             \n",
+      " Normalization)                                                                                   \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_9 (LeakyReLU)      (None, 33, 33, 16)   0           ['batch_normalization_106[0][0]']\n",
+      "                                                                                                  \n",
+      " zero_padding2d_3 (ZeroPadding2  (None, 35, 35, 16)  0           ['leaky_re_lu_9[0][0]']          \n",
+      " D)                                                                                               \n",
+      "                                                                                                  \n",
+      " conv2d_104 (Conv2D)            (None, 34, 34, 32)   2080        ['zero_padding2d_3[0][0]']       \n",
+      "                                                                                                  \n",
+      " batch_normalization_107 (Batch  (None, 34, 34, 32)  128         ['conv2d_104[0][0]']             \n",
+      " Normalization)                                                                                   \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_10 (LeakyReLU)     (None, 34, 34, 32)   0           ['batch_normalization_107[0][0]']\n",
+      "                                                                                                  \n",
+      " dropout_4 (Dropout)            (None, 34, 34, 32)   0           ['leaky_re_lu_10[0][0]']         \n",
+      "                                                                                                  \n",
+      " zero_padding2d_4 (ZeroPadding2  (None, 36, 36, 32)  0           ['dropout_4[0][0]']              \n",
+      " D)                                                                                               \n",
+      "                                                                                                  \n",
+      " conv2d_105 (Conv2D)            (None, 33, 33, 32)   16416       ['zero_padding2d_4[0][0]']       \n",
+      "                                                                                                  \n",
+      " batch_normalization_108 (Batch  (None, 33, 33, 32)  128         ['conv2d_105[0][0]']             \n",
+      " Normalization)                                                                                   \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_11 (LeakyReLU)     (None, 33, 33, 32)   0           ['batch_normalization_108[0][0]']\n",
+      "                                                                                                  \n",
+      " zero_padding2d_5 (ZeroPadding2  (None, 35, 35, 32)  0           ['leaky_re_lu_11[0][0]']         \n",
+      " D)                                                                                               \n",
+      "                                                                                                  \n",
+      " conv2d_106 (Conv2D)            (None, 32, 32, 64)   32832       ['zero_padding2d_5[0][0]']       \n",
+      "                                                                                                  \n",
+      " batch_normalization_109 (Batch  (None, 32, 32, 64)  256         ['conv2d_106[0][0]']             \n",
+      " Normalization)                                                                                   \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_12 (LeakyReLU)     (None, 32, 32, 64)   0           ['batch_normalization_109[0][0]']\n",
+      "                                                                                                  \n",
+      " dropout_5 (Dropout)            (None, 32, 32, 64)   0           ['leaky_re_lu_12[0][0]']         \n",
+      "                                                                                                  \n",
+      " zero_padding2d_6 (ZeroPadding2  (None, 34, 34, 64)  0           ['dropout_5[0][0]']              \n",
+      " D)                                                                                               \n",
+      "                                                                                                  \n",
+      " conv2d_107 (Conv2D)            (None, 32, 32, 64)   36928       ['zero_padding2d_6[0][0]']       \n",
+      "                                                                                                  \n",
+      " batch_normalization_110 (Batch  (None, 32, 32, 64)  256         ['conv2d_107[0][0]']             \n",
+      " Normalization)                                                                                   \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_13 (LeakyReLU)     (None, 32, 32, 64)   0           ['batch_normalization_110[0][0]']\n",
+      "                                                                                                  \n",
+      " zero_padding2d_7 (ZeroPadding2  (None, 34, 34, 64)  0           ['leaky_re_lu_13[0][0]']         \n",
+      " D)                                                                                               \n",
+      "                                                                                                  \n",
+      " conv2d_108 (Conv2D)            (None, 31, 31, 128)  131072      ['zero_padding2d_7[0][0]']       \n",
+      "                                                                                                  \n",
+      " batch_normalization_111 (Batch  (None, 31, 31, 128)  512        ['conv2d_108[0][0]']             \n",
+      " Normalization)                                                                                   \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_14 (LeakyReLU)     (None, 31, 31, 128)  0           ['batch_normalization_111[0][0]']\n",
+      "                                                                                                  \n",
+      " zero_padding2d_8 (ZeroPadding2  (None, 33, 33, 128)  0          ['leaky_re_lu_14[0][0]']         \n",
+      " D)                                                                                               \n",
+      "                                                                                                  \n",
+      " conv2d_109 (Conv2D)            (None, 30, 30, 1)    2049        ['zero_padding2d_8[0][0]']       \n",
       "                                                                                                  \n",
       "==================================================================================================\n",
-      "Total params: 11,182,593\n",
-      "Trainable params: 11,178,753\n",
-      "Non-trainable params: 3,840\n",
+      "Total params: 228,745\n",
+      "Trainable params: 228,025\n",
+      "Non-trainable params: 720\n",
       "__________________________________________________________________________________________________\n"
      ]
     }
@@ -1043,7 +1107,7 @@
     "import tensorflow as tf\n",
     "from pix2pix_model import Pix2PixModel\n",
     "\n",
-    "model = Pix2PixModel(tf.data.Dataset.range(10), tf.data.Dataset.range(10), \"pix2pix-patch\", \"n2n\", num_patches=1)\n",
+    "model = Pix2PixModel(tf.data.Dataset.range(10), tf.data.Dataset.range(10), \"pix2pix-patch\", \"n2n\", num_patches=30)\n",
     "model.discriminator.summary()"
    ]
   },
