Adds unpaired and paired StarGAN models
- Refactors common functions to S2SModel
- Joins Pix2Pix WGAN and GAN in a single class
- Adds a 1d GAN experiment
- Moves network architectures to networks.py

--- a/frechet-inception-distance.ipynb
+++ b/frechet-inception-distance.ipynb
@@ -12,7 +12,10 @@
      "shell.execute_reply": "2022-02-12T00:04:30.965163Z",
      "shell.execute_reply.started": "2022-02-12T00:04:19.122262Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -33,7 +36,10 @@
      "shell.execute_reply": "2022-02-12T00:08:41.628883Z",
      "shell.execute_reply.started": "2022-02-12T00:04:30.967600Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
