Adds histogram loss to P2P models

--- a/00-pick-images-from-rpgmaker.ipynb
+++ b/00-pick-images-from-rpgmaker.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "e5b17465-79bf-4888-bd03-7de81e514e47",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Coletando imagens do RPG Maker\n",
     "\n",
@@ -16,7 +20,11 @@
   {
    "cell_type": "markdown",
    "id": "7bfa32c8-c601-4050-9cb5-6b63860bcd29",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Dependendo do formato do RPG Maker, as imagens foram aumentadas/preenchidas para ficarem com $64\\times64$."
    ]
@@ -33,7 +41,10 @@
      "shell.execute_reply": "2022-02-16T12:27:02.867337Z",
      "shell.execute_reply.started": "2022-02-16T12:27:00.979801Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -61,7 +72,10 @@
      "shell.execute_reply": "2022-02-15T23:48:27.495876Z",
      "shell.execute_reply.started": "2022-02-15T23:48:27.468940Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -137,7 +151,10 @@
      "shell.execute_reply": "2022-02-15T23:48:27.511832Z",
      "shell.execute_reply.started": "2022-02-15T23:48:27.498867Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -193,7 +210,10 @@
      "shell.execute_reply": "2022-02-15T23:48:27.541780Z",
      "shell.execute_reply.started": "2022-02-15T23:48:27.514824Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -296,7 +316,10 @@
      "shell.execute_reply": "2022-02-15T23:48:27.557709Z",
      "shell.execute_reply.started": "2022-02-15T23:48:27.543749Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -323,7 +346,11 @@
   {
    "cell_type": "markdown",
    "id": "627f65c9-96af-43ab-9009-fe22f781e700",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Gerando _dataset_ de _CharSets_ do RPG Maker 2000/2003\n",
     "\n",
@@ -342,7 +369,10 @@
      "shell.execute_reply": "2022-02-15T23:48:29.182469Z",
      "shell.execute_reply.started": "2022-02-15T23:48:27.560705Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -373,7 +403,11 @@
   {
    "cell_type": "markdown",
    "id": "1ce2249e-0c56-4db5-96e1-d73a766e45a8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Gerando _dataset_ de _CharSets_ do RPG Maker XP\n",
     "\n",
@@ -392,7 +426,10 @@
      "shell.execute_reply": "2022-02-15T23:48:31.401260Z",
      "shell.execute_reply.started": "2022-02-15T23:48:29.185471Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -423,7 +460,11 @@
   {
    "cell_type": "markdown",
    "id": "37b2debc-af6b-43fb-b8a5-611352913566",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Gerando _dataset_ de _CharSets_ do RPG Maker VX/RPG Maker VX Ace\n",
     "\n",
@@ -442,7 +483,10 @@
      "shell.execute_reply": "2022-02-15T23:48:34.038723Z",
      "shell.execute_reply.started": "2022-02-15T23:48:31.404229Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -474,7 +518,11 @@
   {
    "cell_type": "markdown",
    "id": "fc057b66-576d-4f88-b591-161432ff923d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Splitting Tiny Hero dataset between train/test"
    ]
@@ -491,7 +539,10 @@
      "shell.execute_reply": "2022-02-16T12:37:53.696026Z",
      "shell.execute_reply.started": "2022-02-16T12:37:53.683969Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -545,7 +596,10 @@
      "shell.execute_reply": "2022-02-16T12:38:15.093174Z",
      "shell.execute_reply.started": "2022-02-16T12:38:12.784355Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
