--- a/pixel-sides.ipynb
+++ b/pixel-sides.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "id": "443821c7-c7fb-4fb8-8e8d-3d44ade75de9",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "![Avatar foto de Flávio Coutinho](https://fegemo.github.io/cefet-front-end/images/flavio-avatar.jpg)\n",
@@ -31,7 +34,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "16fa88a3-dee2-4209-a22f-aa61df6efc93",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -271,7 +278,11 @@
   {
    "cell_type": "markdown",
    "id": "d5dcc916-caf1-4dab-a79a-d972d9aae6c1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Descrição do Projeto\n",
     "\n",
@@ -303,7 +314,11 @@
   {
    "cell_type": "markdown",
    "id": "255371e6-cc61-4563-87c8-f8b3c11341eb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Extração de Sprites\n",
     "\n",
@@ -317,7 +332,11 @@
   {
    "cell_type": "markdown",
    "id": "767062e3-443d-42a6-a8b3-70ccf2a67ff4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Esse _minidataset_ foi gerado para avaliar o classificador de poses que foi treinado apenas com os dados do _dataset_ TinyHero pra\n",
     "verificar o impacto de ter uma distribuição de dados distinta do momento de teste e do de validação. E o resultado foi terrível,\n",
@@ -327,7 +346,11 @@
   {
    "cell_type": "markdown",
    "id": "a697949d-4696-4926-bbb0-1268a6822f29",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Classificador de Pose\n",
     "\n",
@@ -354,7 +377,11 @@
   {
    "cell_type": "markdown",
    "id": "fca01edb-29e9-4c7d-9b18-9e8059449298",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Como um pequeno teste, após ter sido treinada em TinyHero, a rede foi avaliada para classificar o _minidataset_ \n",
     "gerado pela coleta de imagens do RPG Maker 2000 (descrito no passo anterior). Ele possui apenas $96$ imagens\n",
@@ -369,7 +396,11 @@
   {
    "cell_type": "markdown",
    "id": "189079a2-2a58-430f-8f6c-ec201608b4f9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Tanto os exemplos de previsão quanto a matriz de confusão dão ideia dos acertos e erros do classificador nesse _dataset_.\n",
     "\n",
@@ -389,7 +420,11 @@
   {
    "cell_type": "markdown",
    "id": "8765f748-3eb8-47b3-9faa-2b7880592c8e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Geração de Sprite com DCGAN\n",
     "\n",
@@ -420,7 +455,11 @@
   {
    "cell_type": "markdown",
    "id": "d144c63b-996f-47a6-8684-04331e5bf957",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Geração de um Lado dado Outro\n",
     "\n",
@@ -450,7 +489,11 @@
   {
    "cell_type": "markdown",
    "id": "66a617bf-284b-459f-8f94-e14a450acb66",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "É interessante notar, nesse exemplo, que apenas olhando a imagem de entrada do personagem, não é possível\n",
     "inferir que ele possui cabelo, nem a presença e cor dos olhos. Mas a rede foi capaz de inferir\n",
