--- a/playground.ipynb
+++ b/playground.ipynb
@@ -59,6 +59,190 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([4 1], shape=(2,), dtype=int32)\n",
+      "tf.Tensor([1 2], shape=(2,), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[-5 -6]\n",
+      " [-4 -5]\n",
+      " [-3 -4]\n",
+      " [-2 -3]], shape=(4, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "# (HW, 1) * (1, 2)\n",
+    "# (2*2, 1) * (1, 2)\n",
+    "a = tf.constant([[1], [2], [3], [4]])\n",
+    "print(tf.shape(a))\n",
+    "b = tf.constant([[6, 7]])\n",
+    "print(tf.shape(b))\n",
+    "\n",
+    "c = a-b\n",
+    "print(c)\n",
+    "\n",
+    "# d = tf.expand_dims(tf.linspace(-3, 3, num=64), axis=0)\n",
+    "# print(d)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      " input_image (InputLayer)       [(None, 64, 64, 1)]  0           []                               \n",
+      "                                                                                                  \n",
+      " sequential (Sequential)        (None, 32, 32, 16)   256         ['input_image[0][0]']            \n",
+      "                                                                                                  \n",
+      " sequential_1 (Sequential)      (None, 16, 16, 32)   8320        ['sequential[0][0]']             \n",
+      "                                                                                                  \n",
+      " sequential_2 (Sequential)      (None, 8, 8, 64)     33024       ['sequential_1[0][0]']           \n",
+      "                                                                                                  \n",
+      " sequential_3 (Sequential)      (None, 4, 4, 128)    131584      ['sequential_2[0][0]']           \n",
+      "                                                                                                  \n",
+      " sequential_4 (Sequential)      (None, 2, 2, 128)    262656      ['sequential_3[0][0]']           \n",
+      "                                                                                                  \n",
+      " sequential_5 (Sequential)      (None, 1, 1, 128)    262656      ['sequential_4[0][0]']           \n",
+      "                                                                                                  \n",
+      " sequential_6 (Sequential)      (None, 2, 2, 128)    262656      ['sequential_5[0][0]']           \n",
+      "                                                                                                  \n",
+      " concatenate (Concatenate)      (None, 2, 2, 256)    0           ['sequential_6[0][0]',           \n",
+      "                                                                  'sequential_4[0][0]']           \n",
+      "                                                                                                  \n",
+      " sequential_7 (Sequential)      (None, 4, 4, 128)    524800      ['concatenate[0][0]']            \n",
+      "                                                                                                  \n",
+      " concatenate_1 (Concatenate)    (None, 4, 4, 256)    0           ['sequential_7[0][0]',           \n",
+      "                                                                  'sequential_3[0][0]']           \n",
+      "                                                                                                  \n",
+      " sequential_8 (Sequential)      (None, 8, 8, 64)     262400      ['concatenate_1[0][0]']          \n",
+      "                                                                                                  \n",
+      " concatenate_2 (Concatenate)    (None, 8, 8, 128)    0           ['sequential_8[0][0]',           \n",
+      "                                                                  'sequential_2[0][0]']           \n",
+      "                                                                                                  \n",
+      " sequential_9 (Sequential)      (None, 16, 16, 32)   65664       ['concatenate_2[0][0]']          \n",
+      "                                                                                                  \n",
+      " concatenate_3 (Concatenate)    (None, 16, 16, 64)   0           ['sequential_9[0][0]',           \n",
+      "                                                                  'sequential_1[0][0]']           \n",
+      "                                                                                                  \n",
+      " sequential_10 (Sequential)     (None, 32, 32, 16)   16448       ['concatenate_3[0][0]']          \n",
+      "                                                                                                  \n",
+      " concatenate_4 (Concatenate)    (None, 32, 32, 32)   0           ['sequential_10[0][0]',          \n",
+      "                                                                  'sequential[0][0]']             \n",
+      "                                                                                                  \n",
+      " sequential_11 (Sequential)     (None, 64, 64, 8)    4128        ['concatenate_4[0][0]']          \n",
+      "                                                                                                  \n",
+      " concatenate_5 (Concatenate)    (None, 64, 64, 9)    0           ['sequential_11[0][0]',          \n",
+      "                                                                  'input_image[0][0]']            \n",
+      "                                                                                                  \n",
+      " conv2d_6 (Conv2D)              (None, 64, 64, 256)  37120       ['concatenate_5[0][0]']          \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 1,871,712\n",
+      "Trainable params: 1,870,000\n",
+      "Non-trainable params: 1,712\n",
+      "__________________________________________________________________________________________________\n",
+      "Model: \"indexed-patch-resnet-disc\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      " input_image (InputLayer)       [(None, 64, 64, 1)]  0           []                               \n",
+      "                                                                                                  \n",
+      " target_image (InputLayer)      [(None, 64, 64, 1)]  0           []                               \n",
+      "                                                                                                  \n",
+      " concatenate_6 (Concatenate)    (None, 64, 64, 2)    0           ['input_image[0][0]',            \n",
+      "                                                                  'target_image[0][0]']           \n",
+      "                                                                                                  \n",
+      " conv2d_7 (Conv2D)              (None, 64, 64, 64)   2048        ['concatenate_6[0][0]']          \n",
+      "                                                                                                  \n",
+      " instance_normalization (Instan  (None, 64, 64, 64)  128         ['conv2d_7[0][0]']               \n",
+      " ceNormalization)                                                                                 \n",
+      "                                                                                                  \n",
+      " leaky_re_lu_6 (LeakyReLU)      (None, 64, 64, 64)   0           ['instance_normalization[0][0]'] \n",
+      "                                                                                                  \n",
+      " conv2d_8 (Conv2D)              (None, 64, 64, 64)   65536       ['leaky_re_lu_6[0][0]']          \n",
+      "                                                                                                  \n",
+      " instance_normalization_1 (Inst  (None, 64, 64, 64)  128         ['conv2d_8[0][0]']               \n",
+      " anceNormalization)                                                                               \n",
+      "                                                                                                  \n",
+      " re_lu_6 (ReLU)                 (None, 64, 64, 64)   0           ['instance_normalization_1[0][0]'\n",
+      "                                                                 ]                                \n",
+      "                                                                                                  \n",
+      " conv2d_9 (Conv2D)              (None, 64, 64, 64)   65536       ['re_lu_6[0][0]']                \n",
+      "                                                                                                  \n",
+      " instance_normalization_2 (Inst  (None, 64, 64, 64)  128         ['conv2d_9[0][0]']               \n",
+      " anceNormalization)                                                                               \n",
+      "                                                                                                  \n",
+      " add (Add)                      (None, 64, 64, 64)   0           ['leaky_re_lu_6[0][0]',          \n",
+      "                                                                  'instance_normalization_2[0][0]'\n",
+      "                                                                 ]                                \n",
+      "                                                                                                  \n",
+      " dropout_6 (Dropout)            (None, 64, 64, 64)   0           ['add[0][0]']                    \n",
+      "                                                                                                  \n",
+      " conv2d_10 (Conv2D)             (None, 64, 64, 64)   65536       ['dropout_6[0][0]']              \n",
+      "                                                                                                  \n",
+      " instance_normalization_3 (Inst  (None, 64, 64, 64)  128         ['conv2d_10[0][0]']              \n",
+      " anceNormalization)                                                                               \n",
+      "                                                                                                  \n",
+      " re_lu_7 (ReLU)                 (None, 64, 64, 64)   0           ['instance_normalization_3[0][0]'\n",
+      "                                                                 ]                                \n",
+      "                                                                                                  \n",
+      " conv2d_11 (Conv2D)             (None, 64, 64, 64)   65536       ['re_lu_7[0][0]']                \n",
+      "                                                                                                  \n",
+      " instance_normalization_4 (Inst  (None, 64, 64, 64)  128         ['conv2d_11[0][0]']              \n",
+      " anceNormalization)                                                                               \n",
+      "                                                                                                  \n",
+      " add_1 (Add)                    (None, 64, 64, 64)   0           ['dropout_6[0][0]',              \n",
+      "                                                                  'instance_normalization_4[0][0]'\n",
+      "                                                                 ]                                \n",
+      "                                                                                                  \n",
+      " dropout_7 (Dropout)            (None, 64, 64, 64)   0           ['add_1[0][0]']                  \n",
+      "                                                                                                  \n",
+      " conv2d_12 (Conv2D)             (None, 64, 64, 1)    1025        ['dropout_7[0][0]']              \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 265,857\n",
+      "Trainable params: 265,857\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from networks import IndexedUnetGenerator, IndexedPatchDiscriminator, IndexedPatchResnetDiscriminator\n",
+    "\n",
+    "gen = IndexedUnetGenerator()\n",
+    "gen.summary(expand_nested=False)\n",
+    "disc = IndexedPatchResnetDiscriminator()\n",
+    "disc.summary(expand_nested=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "outputs": [
     {
