Refactors augmentation, adds L1 metric and more

--- a/improving-pix2pix.ipynb
+++ b/improving-pix2pix.ipynb
@@ -12,7 +12,10 @@
      "shell.execute_reply": "2022-03-23T22:20:27.715438Z",
      "shell.execute_reply.started": "2022-03-23T22:20:23.493367Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -52,7 +55,10 @@
      "shell.execute_reply": "2022-03-23T22:20:28.317627Z",
      "shell.execute_reply.started": "2022-03-23T22:20:27.717438Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -82,7 +88,10 @@
      "shell.execute_reply": "2022-03-23T22:20:28.333586Z",
      "shell.execute_reply.started": "2022-03-23T22:20:28.322611Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -107,7 +116,10 @@
      "shell.execute_reply": "2022-03-23T22:20:28.349538Z",
      "shell.execute_reply.started": "2022-03-23T22:20:28.339566Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -144,7 +156,10 @@
      "shell.execute_reply": "2022-03-23T22:20:28.365534Z",
      "shell.execute_reply.started": "2022-03-23T22:20:28.354563Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -158,7 +173,11 @@
   {
    "cell_type": "markdown",
    "id": "aa85b8e9-a0a7-40f5-b94a-cb35b42f58f5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Generating fake/real images dataset\n",
     "\n",
@@ -177,7 +196,10 @@
      "shell.execute_reply": "2022-03-23T22:20:28.396670Z",
      "shell.execute_reply.started": "2022-03-23T22:20:28.370483Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -240,7 +262,11 @@
   {
    "cell_type": "markdown",
    "id": "44b4572c-888c-4ec9-95b7-621bbd7cda75",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Experimenting with Different Models"
    ]
@@ -257,7 +283,10 @@
      "shell.execute_reply": "2022-03-23T22:20:28.854212Z",
      "shell.execute_reply.started": "2022-03-23T22:20:28.399668Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -478,7 +507,10 @@
      "shell.execute_reply": "2022-03-23T22:20:29.261156Z",
      "shell.execute_reply.started": "2022-03-23T22:20:28.860196Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -634,7 +666,10 @@
      "shell.execute_reply": "2022-03-23T22:20:29.292118Z",
      "shell.execute_reply.started": "2022-03-23T22:20:29.264116Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -748,7 +783,10 @@
      "shell.execute_reply": "2022-03-23T22:20:32.104325Z",
      "shell.execute_reply.started": "2022-03-23T22:20:29.294120Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -826,7 +864,10 @@
      "shell.execute_reply": "2022-03-23T22:20:32.119772Z",
      "shell.execute_reply.started": "2022-03-23T22:20:32.106320Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -845,7 +886,10 @@
      "shell.execute_reply": "2022-03-23T22:20:32.370874Z",
      "shell.execute_reply.started": "2022-03-23T22:20:32.121769Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -898,7 +942,10 @@
      "shell.execute_reply": "2022-03-23T22:55:32.791608Z",
      "shell.execute_reply.started": "2022-03-23T22:20:32.374563Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -1145,7 +1192,10 @@
      "shell.execute_reply": "2022-03-23T22:55:33.168442Z",
      "shell.execute_reply.started": "2022-03-23T22:55:32.793604Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
