Initial (not working) collagan

--- a/03-side2side.ipynb
+++ b/03-side2side.ipynb
@@ -124,22 +124,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Projetos 2\\pixel-sides\\venv\\lib\\site-packages\\tensorflow_addons\\utils\\ensure_tf_install.py:53: UserWarning: Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.6.0 and strictly below 2.9.0 (nightly versions are not supported). \n",
-      " The versions of TensorFlow you are currently using is 2.9.0 and is not supported. \n",
-      "Some things might work, some things might not.\n",
-      "If you were to encounter a bug, do not file an issue.\n",
-      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
-      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
-      "https://github.com/tensorflow/addons\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from dataset_utils import create_paired_s2s_image_loader as create_image_loader\n",
     "# from dataset_utils import create_augmentation_with_prob, normalize_two as normalize\n",
@@ -276,11 +261,25 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Projetos 2\\pixel-sides\\venv\\lib\\site-packages\\tensorflow_addons\\utils\\ensure_tf_install.py:53: UserWarning: Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.6.0 and strictly below 2.9.0 (nightly versions are not supported). \n",
+      " The versions of TensorFlow you are currently using is 2.9.0 and is not supported. \n",
+      "Some things might work, some things might not.\n",
+      "If you were to encounter a bug, do not file an issue.\n",
+      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
+      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
+      "https://github.com/tensorflow/addons\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generator: model with 17,144,512 parameters\n",
-      "Discriminator: indexed-patch-disc with 3,649 parameters\n",
+      "Generator: unet-gen with 29,307,844 parameters\n",
+      "Discriminator: patch-disc with 9,217 parameters\n",
       "Mode gan with binary_crossentropy loss\n"
      ]
     }
@@ -289,8 +288,8 @@
     "from pix2pix_model import Pix2PixModel, Pix2PixIndexedModel#, Pix2PixWassersteinModel#, Pix2PixFFTModel\n",
     "\n",
     "# f2r = Pix2PixFFTModel(f2r_train_dataset, f2r_test_dataset, \"front2right\", \"pix2pix-rpgmakerxp-fftsquare1000\", LAMBDA_FFT=1000)\n",
-    "# model = Pix2PixModel.build(f2r_train_dataset, f2r_test_dataset, \"indexed-54\", \"aiide\", \"patch\", \"unet\", \"gan\", discriminator_steps=1, lambda_histogram=0., lambda_l1=100., lambda_gp=10.)\n",
-    "model = Pix2PixIndexedModel(f2r_train_dataset, f2r_test_dataset, \"indexed-54\", \"aiide\", \"indexed-patch\", \"indexed-unet\", \"gan\", discriminator_steps=1, lambda_l1=0., lambda_segmentation=0.01, lambda_histogram=0.)\n"
+    "model = Pix2PixModel.build(f2r_train_dataset, f2r_test_dataset, \"sbgames\", \"sbgames\", \"patch\", \"unet\", \"gan\", discriminator_steps=1, lambda_histogram=0., lambda_l1=100., lambda_gp=10.)\n",
+    "# model = Pix2PixIndexedModel(f2r_train_dataset, f2r_test_dataset, \"indexed-54\", \"aiide\", \"indexed-patch\", \"indexed-unet\", \"gan\", discriminator_steps=1, lambda_l1=0., lambda_segmentation=0.01, lambda_histogram=0.)\n"
    ]
   },
   {
